bug 97171, startup perf- remove the need of loading of langGroups.properties files at startup time to speed up startup performance, r=ftang, sr=waterson